<resources>
    <string name="app_name">Tumblr_Android</string>
    <string name="consumer_key">B61NLyvSwHOtf2CRVLHkwXl0MTXlnJMb6hrn0OSzkjKCMazQp5</string>
    <string name="secret_key">P60AoZyKj6cZpQygtbL1U02zF0skZBP721MEnHTHUZ7foXk89v</string>
    <string name="zero">0</string>
    <string name="postsText">Posts</string>
    <string name="notesText">Likes</string>
    <string name="FollowersText">Followers</string>
    <string name="FollowingText">Following</string>
    <string name="MonthText">Month</string>
    <string name="WeekText">Week</string>
    <string name="DayText">Day</string>
    <string name="zero_persent">0.0%</string>
    <string name="attr">static_image</string>
    <string name="slug">Title</string>
    <string-array name="day_arrays">
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
    </string-array>

</resources>
