<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/zero_persent"
        android:id="@+id/persentUpCount"
        android:gravity="center_horizontal"
        android:textColor="@android:color/holo_green_light" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/upImage"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/white_up_36dp"
        android:contentDescription="@string/attr"
        android:layout_alignBottom="@+id/persentUpCount"
        android:layout_toRightOf="@+id/persentUpCount"
        android:layout_toEndOf="@+id/persentUpCount" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/zero"
        android:id="@+id/lambdaUpCount"
        android:layout_gravity="right"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/upImage"
        android:layout_toEndOf="@+id/upImage"
        android:textColor="@android:color/holo_green_light" />

</RelativeLayout>