<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/zero_persent"
        android:id="@+id/persentDownCount"
        android:gravity="center_horizontal"
        android:textColor="@android:color/holo_red_light" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/downImage"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/white_down_36dp"
        android:contentDescription="@string/attr"
        android:layout_alignBottom="@+id/persentDownCount"
        android:layout_toRightOf="@+id/persentDownCount"
        android:layout_toEndOf="@+id/persentDownCount" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/zero"
        android:id="@+id/lambdaDownCount"
        android:layout_gravity="right"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/downImage"
        android:layout_toEndOf="@+id/downImage"
        android:textColor="@android:color/holo_red_light" />

</RelativeLayout>