<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/zero_persent"
        android:id="@+id/persentEqualCount"
        android:gravity="center_horizontal"
        android:textColor="@android:color/holo_orange_light" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/equalImage"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/abc_scrubber_control_off_mtrl_alpha"
        android:contentDescription="@string/attr"
        android:layout_alignBottom="@+id/persentEqualCount"
        android:layout_toRightOf="@+id/persentEqualCount"
        android:layout_toEndOf="@+id/persentEqualCount" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/zero"
        android:id="@+id/lambdaDownCount"
        android:layout_gravity="right"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/equalImage"
        android:layout_toEndOf="@+id/equalImage"
        android:textColor="@android:color/holo_orange_dark" />

</RelativeLayout>